write: fix icon menu - should not wrap

--- a/packages/write/ui/menu.css
+++ b/packages/write/ui/menu.css
@@ -124,4 +124,5 @@
 }
 .ui.compact.icon.menu {
 	min-height: 2.4em;
+	flex-wrap:nowrap;
 }
